Project/objects/Apttus_Proposal__Proposal__c.object
<CustomObject>
    <fields>
        <fullName>APTS_FF_Quotation_Template_Derived_From__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; APTS_Quotation_Favorite__r.Id , IF( NOT( ISBLANK(APTS_Quotation_Favorite__r.APTS_External_Revision__c) ) , 
APTS_Quotation_Favorite__r.APTS_Quotation_Number_Internal__c + &quot;.&quot; + APTS_Quotation_Favorite__r.APTS_External_Revision__c, 

APTS_Quotation_Favorite__r.APTS_Quotation_Number_Internal__c 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Template Derived From</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark the quotation as a favourite for the user.</inlineHelpText>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Financial_Guarantee__c</fullName>
        <inlineHelpText>&quot;The financial Guarantee is a promise to take responsibility for another company&apos;s financial obligation if that company cannot meet its obligation. In this field the user has to insert who take the responsibility for the payment.&quot;</inlineHelpText>
        <label>Financial Guarantee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Freight_Payment_Terms__c</fullName>
        <inlineHelpText>Payment for freight to 3rd party forwarder; it can be different to the payment term to ABB.The field is requested and used principally by the BU IAMA in US.</inlineHelpText>
        <label>Freight Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_Code__c</fullName>
        <label>GTV Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_GTV_in_Cart__c</fullName>
        <label>GTV in Cart</label>
        <summaryFilterItems>
            <field>Apttus_Proposal__Proposal_Line_Item__c.APTS_Product_is_GTV_Product__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Generate_Ng__c</fullName>
        <formula>IF( 

AND( 
APTS_Template__c= false, 


OR( 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Draft&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Approved&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Rejected&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Approval Required&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Generated&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Partially Ordered&quot;) ,  
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Under Support&quot;) 

), NOT(ISBLANK(APTS_Primary_Contact__c))), 


HYPERLINK(&quot;/apex/Apttus_Proposal__DocGen?id=&quot;&amp;Id + &quot;&amp;context=proposal&quot; + &quot;&amp;name=&quot;&amp;Name, IMAGE(&quot;/resource/Apttus_Proposal__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;) 
,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Primary contact is mandatory for document generation.Please add Primary Contact.</inlineHelpText>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Generate__c</fullName>
        <formula>IF( APTS_Record_Type_Name__c=&quot;LP&quot;,IF(AND($User.Id==OwnerId,OR((ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&quot;Approved&quot;)),
(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&quot;Generated&quot;)),
(ISPICKVAL(Apttus_Proposal__Approval_Stage__c,&quot;Presented&quot;))),APTS_Is_Placeholder_Quote__c=FALSE,ISPICKVAL(APTS_Quotation_Category__c,&quot;Open&quot;)),
IF((TEXT(APTS_Country__c)=&apos;Spain&apos;),   
HYPERLINK(&quot;/apex/APTS_ConfiguratorSectionSelection?id=&quot;&amp;Id&amp;&quot;&amp;previewBtn=&quot;&amp;&quot;NO&quot;,IMAGE(&quot;/resource/Apttus_Proposal__Button_Generate&quot;,&quot;Generate&quot;),&apos;_self&apos;),
HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalGenerate?id=&quot;&amp;Id,IMAGE(&quot;/resource/Apttus_Proposal__Button_Generate&quot;,&quot;Generate&quot;),&quot;_self&quot;)),NULL),

IF($User.Id == OwnerId,IF
(AND(OR(
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Draft&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;RFQ Received&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;RFQ Assigned&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Approved&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Rejected&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Approval Required&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Generated&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Partially Ordered&quot;) , 
ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Order Pending&quot;) 

), 

APTS_Is_Placeholder_Quote__c =FALSE), 
HYPERLINK(&quot;/apex/APTS_ConfiguratorSectionSelection?id=&quot;&amp;Id&amp;&quot;&amp;previewBtn=&quot;&amp;&quot;NO&quot; , IMAGE(&quot;/resource/Apttus_Proposal__Button_Generate&quot;, &quot;Generate&quot;),&apos;_self&apos;) 
,NULL),NULL))</formula>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Generated_Date__c</fullName>
        <label>Generated Date</label>
        <type>Date</type>
    </fields>
   <fields>
        <fullName>APTS_Go_to_Shopping_Cart__c</fullName>
        <formula>IF ( AND(

LEN( Apttus_QPConfig__PriceListId__c ) &gt; 0,
APTS_Template__c= false,
TEXT( Apttus_Proposal__Approval_Stage__c )&lt;&gt; &quot;Submitted to Customer&quot;,
TEXT( Apttus_Proposal__Approval_Stage__c )&lt;&gt; &quot;Superseded&quot;,
TEXT( Apttus_Proposal__Approval_Stage__c )&lt;&gt; &quot;Validity Expired&quot;,

OR(

AND
(
TEXT( APTS_Quotation_Type__c ) = &quot;Firm&quot;,
TEXT( APTS_Channel_Class_Level_1__c)&lt;&gt; &quot;&quot;,
TEXT( APTS_Requested_Bid_Submission_Date_Comm__c)&lt;&gt; &quot;&quot;,
TEXT( APTS_RFQ_Received_Date__c)&lt;&gt; &quot;&quot;,
APTS_ABB_Location_Bidding_unit__c &lt;&gt; &quot;&quot;,
APTS_Account_End_User__c &lt;&gt; &quot;&quot;,
TEXT(APTS_Expected_Award_Date_EAD__c) &lt;&gt; &quot;&quot;,
TEXT( APTS_Industry_Usage_Level_1__c)&lt;&gt; &quot;&quot;,
TEXT( APTS_Industry_Usage_Level_2__c)&lt;&gt; &quot;&quot;,
APTS_Customer_Payment_Terms__c &lt;&gt; &quot;&quot; ,
APTS_Customer_Incoterms__c &lt;&gt; &quot;&quot;,
APTS_Customer_Incoterm_Destination__c &lt;&gt; &quot;&quot;,
APTS_Payment_Method__c &lt;&gt; &quot;&quot;,
APTS_Packing__c &lt;&gt; &quot;&quot;,
APTS_Warranty__c &lt;&gt; &quot;&quot;
)
,

TEXT( APTS_Quotation_Type__c ) = &quot;Budgetary/Binding&quot;,
TEXT( APTS_Quotation_Type__c ) = &quot;Budgetary/Non-Binding&quot;),

IF(OR(ISPICKVAL(APTS_ABB_Sales_Stage__c, &quot;Bidding&quot;), 
ISPICKVAL(APTS_ABB_Sales_Stage__c, &quot;Negotiation&quot;), 
ISPICKVAL(APTS_ABB_Sales_Stage__c, &quot;Closed&quot;)),APTS_End_User_Project__c &lt;&gt; &quot;&quot;, false)

)
,





IF(
AND(APTS_Record_Type_Name__c == &apos;Transactional Quotation&apos;, TEXT($User.APTS_Apttus_Flow_Permission__c) = &quot;PG_Flow&quot;)
,
HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalConfiguration?id=&quot;
&amp;Id+&quot;&amp;flow=PG_Flow&amp;productOrderByClause=Name NULLS LAST, Name&quot;&amp;&quot;&amp;useAdvancedApproval=true&amp;useDealOptimizer=true&quot;&amp;&quot;&amp;prestoAppId=a3h7E00000004on&amp;pricingProfile=Advanced&quot;,
IMAGE(&quot;/resource/APTS_Go_to_Shopping_Cart&quot;, &quot;Go to Shopping Cart&quot;),&quot;_self&quot;),


IF(
AND(APTS_Record_Type_Name__c == &apos;Transactional Quotation&apos;, TEXT($User.APTS_Apttus_Flow_Permission__c) = &quot;PG_FF_Flow&quot;)
,
HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalConfiguration?id=&quot;
&amp;Id+&quot;&amp;flow=PG_FF_Flow&amp;productOrderByClause=Name NULLS LAST, Name&quot;&amp;&quot;&amp;useAdvancedApproval=true&amp;useDealOptimizer=true&quot;&amp;&quot;&amp;prestoAppId=a3h7E00000004on&amp;pricingProfile=Advanced&quot;,
IMAGE(&quot;/resource/APTS_Go_to_Shopping_Cart&quot;, &quot;Go to Shopping Cart&quot;),&quot;_self&quot;),



HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalConfiguration?id=&quot;
&amp;Id+&quot;&amp;flow=PG_Flow&amp;productOrderByClause=Name NULLS LAST, Name&quot;&amp;&quot;&amp;useAdvancedApproval=true&amp;useDealOptimizer=true&quot;&amp;&quot;&amp;prestoAppId=a3h7E00000004on&amp;pricingProfile=Advanced&quot;,
IMAGE(&quot;/resource/APTS_Go_to_Shopping_Cart&quot;, &quot;Go to Shopping Cart&quot;),&quot;_self&quot;))),NULL)</formula>
        <inlineHelpText>To enable Go to Shopping Cart for Firm Quote, fill
Channel Class Level 1,
Requested Bid Submission Date (Comm.),
RFQ Received Date,
ABB Location – Bidding unit,
Account End User,
Industry Usage Level 1&amp;2, End User Project and all mandatory fields.</inlineHelpText>
        <label>Go to Shopping Cart</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Has_ERP_LN_Line_Items__c</fullName>
        <label>Has ERP_LN Line Items</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Has_ERP_LN__c</fullName>
        <formula>CASE(APTS_ERP_LN_Line_Items__c, 
0, &apos;None&apos;, 
&apos;ERP_LN&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has ERP_LN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Has_Hyperlinks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Hyperlinks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Has_References__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has References</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Discounts__c</fullName>
        <label>APTS_Hierarchy Discounts</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_3_Code_Count__c</fullName>
        <description>Record count of products which are not GTV Products and  contains Hierarchy Level 3 Code as &apos;E0&apos;.
This field is used in Template.</description>
        <label>Hierarchy Level 3 Code Count</label>
        <summaryFilterItems>
            <field>Apttus_Proposal__Proposal_Line_Item__c.APTS_Hierarchy_Level_3_Code_text__c</field>
            <operation>contains</operation>
            <value>E0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Apttus_Proposal__Proposal_Line_Item__c.APTS_Product_is_GTV_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Reference_System__c</fullName>
        <description>LP Spain</description>
        <inlineHelpText>Indicates what was the External system that was being used to configure the products in this quotation</inlineHelpText>
        <label>Quotation Reference System</label>
        <picklist>
            <picklistValues>
                <fullName>BOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cBOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>PMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProSales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SalesForce</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_in_Cart__c</fullName>
        <label>Hierarchy in Cart</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_level__c</fullName>
        <label>APTS_Hierarchy_level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Include_Customer_Cover_Page_Image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Customer Cover Page Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Include_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Include_ToC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include ToC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Incoterm_Description__c</fullName>
        <description>Field to hold the description value of Incoterm in format of &quot;Code - Description&quot;. Value for this field is populated from Apttus LSO data.</description>
        <inlineHelpText>Incoterms information coming from opportuntiy or account (LOD information).</inlineHelpText>
        <label>Incoterm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Incoterms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Incoterms information coming from opportuntiy or account (LOD information).</inlineHelpText>
        <label>Customer Incoterms</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Code_Used_For__c</field>
                <operation>equals</operation>
                <value>Incoterm</value>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Locale__c</field>
                <operation>equals</operation>
                <valueField>$Source.APTS_Locale__c</valueField>
            </filterItems>
            <filterItems>
                <field>APTS_Master_Picklist_Table__c.APTS_Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.APTS_Country__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Quotations (Incoterms)</relationshipLabel>
        <relationshipName>Quotations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Industry_Usage_Level_1__c</fullName>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XY</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
     <fields>
        <fullName>APTS_Industry_Usage_Level_2__c</fullName>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level 2</label>
        <picklist>
            <controllingField>APTS_Industry_Usage_Level_1__c</controllingField>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRA.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UT.3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
      <fields>
        <fullName>APTS_Industry_Usage_Level_3__c</fullName>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage Level 3</label>
        <picklist>
            <controllingField>APTS_Industry_Usage_Level_2__c</controllingField>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.10.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.11.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.12.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.14.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.17.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.18.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.4.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.7.2</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Industry_Usage_Lowest_Level__c</fullName>
        <formula>IF( TEXT( APTS_Industry_Usage_Level_3__c  )&lt;&gt; &quot;&quot; ,  TEXT( APTS_Industry_Usage_Level_3__c ) , TEXT( APTS_Industry_Usage_Level_2__c ))</formula>
        <inlineHelpText>The Industry Usage classification (multi-level) describes the main industrial activity (usage) to which the delivered ABB offering is applied to (or intended to be used).</inlineHelpText>
        <label>Industry Usage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Initiative__c</fullName>
        <label>Initiative</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSPP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>APTS_Insert_Gross_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insert Gross Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Inside_Sales_Support__c</fullName>
        <label>Inside Sales Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Internal_Revision__c</fullName>
        <inlineHelpText>Review of the quotation internally initiate (automatically incremented with numbers and not included in the documents layout)</inlineHelpText>
        <label>Internal Revision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_IsClone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By : Parag Sharma
Purpose : For PG Stream when Quotation gets Clone this checkbox will Checked for Reference</description>
        <label>Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsRevised__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By : Parag Sharma
Purpose : For PG Stream when Quotation gets Revised this checkbox will Checked for Reference</description>
        <label>Revision</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsSectionTemplateIncluded__c</fullName>
        <formula>/**IF(OR(TEXT(APTS_Country__c)=&apos;France&apos;,TEXT(APTS_Country__c)=&apos;Italy&apos;),TEXT(APTS_Quotation_Type__c) ,IF(APTS_Is_Section_Included__c=True,&quot;SectionIncluded&quot;,&quot;SectionNotIncluded&quot;))
**/
IF(TEXT(APTS_Country__c)=&apos;Italy&apos; &amp;&amp; TEXT(APTS_Quotation_Type__c)&lt;&gt;&apos;Firm&apos; ,IF(TEXT(APTS_Quotation_Type__c)=&apos;Budgetary/Binding&apos;,&quot;Binding&quot;,&quot;Non-Binding&quot;),IF(TEXT(APTS_Country__c)=&apos;France&apos;,TEXT(APTS_Quotation_Type__c),IF(APTS_Is_Section_Included__c=True,&quot;SectionIncluded&quot;,&quot;SectionNotIncluded&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsSectionTemplateIncluded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Automatic_Quote_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Automatic Quote Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Clone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to denote if the quotation is cloned from some other quotation</description>
        <label>Is Clone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Concurrent_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By : Parag Sharma
Purpose : JIRA Ticket # ABBPG-1928 for once User Started Configuration no other User can perform activity on Same Quotation</description>
        <label>Is Concurrent User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_MSPA_Created_Non_Buying_Qoute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to check if an MSPA is created from non buying quotation. Once a MSPA is created this flag will be set to true and prevent further MSPA creation</description>
        <inlineHelpText>Flag to check if an MSPA is created from non buying quotation. Once a MSPA is created this flag will be set to true and prevent further MSPA creation</inlineHelpText>
        <label>Is MSPA Created For Non Buying Qoute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Placeholder_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This indicator identifies the quote is created for regular quoting purposes or used for adding products to opportunity</description>
        <inlineHelpText>This indicator identifies the quote is created for regular quoting purposes or used for adding products to opportunity</inlineHelpText>
        <label>Is Placeholder Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Section_Included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Section Included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_AccountCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer name and code of the direct customer</description>
        <inlineHelpText>Indicates the Buying Account associated with the Quotation. In some cases, this will be Unknown Account for the country.</inlineHelpText>
        <label>Account Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>GIS Approved</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotations (Account Customer)</relationshipLabel>
        <relationshipName>Quotations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Account_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indirect customer to which the MSPA is related.</description>
        <inlineHelpText>Primary partner associated with Quotation</inlineHelpText>
        <label>Primary Partner Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>GIS Approved</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotations (Primary Partner)</relationshipLabel>
        <relationshipName>Quotations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Clone__c</fullName>
        <formula>IF(APTS_Is_Placeholder_Quote__c =TRUE, 
NULL, 
HYPERLINK(&apos;/apex/APTS_CustomActionNavigator?id=&apos;&amp;Id+&apos;&amp;objectType=Proposal&amp;action=clone&apos;, IMAGE(&apos;/resource/APTS_LP_Clone&apos;, &apos;Clone&apos;),&apos;_self&apos;) 
)</formula>
        <label>Clone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Distribution_Channel__c</fullName>
        <inlineHelpText>distribution channel determines how materials or services are sold and how they are distributed to customers, for example, retail, wholesale, self-collection.</inlineHelpText>
        <label>Distribution Channel (Do not use picklis</label>
        <picklist>
            <picklistValues>
                <fullName>BT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_GTV_Level__c</fullName>
        <label>GTV Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Group__c</fullName>
        <label>Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>